--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -206,16 +206,21 @@ section {
     margin: 0 auto;
 }
 
+.section05 .container > p {
+    text-align: center;
+}
+
 .section05 .container p {
     font-size: 23px;
     line-height: 35px;
     letter-spacing: -1.8px;
-    margin-top: 4px;
+    margin-top: 6px;
 }
 
 .section05 .container p + h2 {
     margin-top: 16px;
     margin-bottom: 44px;
+    text-align: center;
 }
 
 .section05 ul {
