--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -42,9 +42,9 @@ section {
     position: relative;
 }
 
-/* ---- e””i??i?¸ e³μi†μ ---- */
+/* ---- eâ€â€i??i?Â¸ eÂ³Î¼iâ€ Î¼ ---- */
 
-/* i?œe¸Œ i?€i?´i?€ */
+/* i?Å“eÂ¸Å’ i?â‚¬i?Â´i?â‚¬ */
 .sub-page-title {
     font-size: 43px;
     font-weight: bold;
@@ -58,6 +58,7 @@ section {
     font-size: 13px;
     text-align: center;
     letter-spacing: 5px;
+    color: #ddd;
 }
 
 .default-background {
@@ -66,7 +67,7 @@ section {
 
 
 
-/* i￠Œi?°e¡œ e¶™e?” i?´e?¸i§€ */
+/* iï¿ Å’i?Â°eÂ¡Å“ eÂ¶â„¢e?â€ i?Â´e?Â¸iÂ§â‚¬ */
 .image_box_left {
     position: absolute;
     left: 0;
@@ -324,4 +325,85 @@ strong {
     height: 3px;
     transition: left 500ms;
     cursor: pointer;
+}
+
+section.board-link {
+    margin-top: 80px;
+}
+
+section.board-link ul {
+    margin-left: -3.3333333333%;
+}
+
+section.board-link ul li {
+    width: 30%;
+    margin-left: 3.3333333333%;
+}
+
+.board-link {
+    margin-top: 80px;
+    text-align: center;
+    margin-bottom: 93px;
+}
+
+.board-link .section-title {
+    line-height: 1.3
+}
+
+.board-link ul {
+    margin-top: 49px;
+    margin-left: -3.07%;
+    overflow: hidden;
+}
+
+.board-link ul li {
+    width: 46.93%;
+    float: left;
+    margin-left: 3.07%;
+    padding-top: 344px;
+}
+
+.board-link ul li:first-child {
+    background: url(../images/sub/implant/digital/digital20.jpg) no-repeat top center;
+}
+
+.board-link ul li.last-img {
+    background: url(../images/sub/implant/digital/digital21.jpg) no-repeat top center;
+}
+
+.board-link ul li p {
+    height: 77px;
+    background: #9b8b7e;
+    padding-left: 42px;
+    padding-right: 35px;
+    text-align: left;
+    position: relative;
+}
+
+.board-link ul li p span:first-child {
+    padding-top: 25px;
+    display: block;
+    font-size: 23px;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: -2px;
+}
+
+.board-link ul li p span.view {
+    position: absolute;
+    right: 78px;
+    top: 5px;
+    font-size: 19px;
+    color: #fff;
+    letter-spacing: 1px;
+}
+
+.board-link ul li p span.view:after {
+    background: url(../images/sub/implant/digital/digital_arrow.png) no-repeat top center;
+    content: '';
+    position: absolute;
+    right: -47px;
+    width: 33px;
+    height: 17px;
+    bottom: 0;
 }
