--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -46,14 +46,14 @@
 }
 
 .section01 .slider-pagenation .bx-pager-item span:first-child {
-    width: 47px;
-    height: 47px;
+    width: 42px;
+    height: 42px;
     margin-right: 16px;
     padding: 13px;
     box-sizing: border-box;
     border: 1px solid #ddd;
     border-radius: unset;
-    font-size: 19px;
+    font-size: 15px;
     font-weight: 400;
 }
 
@@ -64,7 +64,7 @@
 }
 
 .section01 .slider-pagenation .bx-pager-item .label {
-    font-size: 20px;
+    font-size: 15px;
     padding: 13px 50px 13px 0;
     position: relative;
     letter-spacing: -1.5px;
@@ -329,13 +329,13 @@
     bottom: -135px;
 }
 
-.section03 .image_box_right {
+.section03 .image_box_left {
     /* max-width: 1048px; */
     width: 100%;
     height: 449px;
     top: 0;
-    left: 50%;
-    margin-left: -210px;
+    right: 0;
+    margin-left: 210px;
 }
 
 .section03 .img {
@@ -347,6 +347,7 @@
     width: 41%;
 }
 
+
 .section03 .bg {
     background: #7e6956;
     position: absolute;
@@ -354,5 +355,10 @@
     top: 0;
     width: 50%;
     height: 449px;
+}
+
+.section03 .max-layout-width {
+    padding-left: 50%;
+    box-sizing: border-box;
 }
 
