--- a/src/main/webapp/css/info/directions.css
+++ b/src/main/webapp/css/info/directions.css
@@ -4,7 +4,7 @@
 
 #map {
     width: 100%;
-    height: 789px;
+    height: 345px;
 }
 
 .section02 {
@@ -135,4 +135,8 @@ li:before {
 
 .taxi:before {
     background: url(../../images/sub/info/directions/location04.png);
+}
+
+.section04 .max-layout-width {
+    width: 1080px;
 }
