본원소개 css 수정

--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -214,7 +214,7 @@ section {
     font-size: 23px;
     line-height: 35px;
     letter-spacing: -1.8px;
-    margin-top: 6px;
+    /* margin-top: 6px; */
 }
 
 .section05 .container p + h2 {
@@ -259,7 +259,7 @@ section {
 
 .image-container p {
     font-size: 27px;
-    margin-top: 15px;
+    margin-top: 9px;
 }
 
 .section05 .image-container li > div {
