--- a/src/main/webapp/css/implant/boneGraftImplant.css
+++ b/src/main/webapp/css/implant/boneGraftImplant.css
@@ -53,14 +53,14 @@
 .section02 .section-title {
     line-height: 1.3;
     /* letter-spacing: -2px; */
-    padding-top: 20px;
+    padding-top: 29px;
 }
 
 .section02 .section-text {
     width: 590px;
     word-break: keep-all;
     line-height: 1.7;
-    margin-top: 40px;
+    margin-top: 16px;
 }
 
 .section02 .max-layout-width {
@@ -176,7 +176,7 @@
 }
 
 .section05 {
-    margin-top: 40px;
+    margin-top: 57px;
 }
 
 .section05 .max-layout-width .text {
@@ -375,4 +375,9 @@
     line-height: 1.5;
     font-size: 16px;
     letter-spacing: -1px;
+}
+
+
+section.board-link {
+    margin-top: 135px;
 }
