--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -17,13 +17,14 @@
 
 .section01 .section-title {
     line-height: 1.3;
+    margin-bottom: -6px;
 }
 
 .section01 .bg {
     margin-top: 31px;
     background: #f5f5f5;
-    padding-top: 30px;
-    padding-bottom: 115px;
+    padding-top: 20px;
+    padding-bottom: 144px;
 }
 
 .section01 .section-text {
@@ -31,7 +32,7 @@
 }
 
 .section01 .section-text:first-child {
-    margin-bottom: 8px;
+    margin-bottom: -6px;
 }
 
 .section01 .image_box_left {
@@ -67,7 +68,7 @@
 }
 
 .section02 .text-box h2 + p {
-    margin-top: 36px;
+    /* margin-top: 9px; */
     margin-bottom: 37px;
 }
 
@@ -118,7 +119,7 @@
 }
 
 .section04 {
-    margin-top: 124px;
+    margin-top: 148px;
 }
 
 .section04 .max-layout-width .text {
@@ -132,7 +133,7 @@
 
 .section04 .image_box_right {
     max-width: 1276px;
-    height: 482px;
+    height: 398px;
     width: 50%;
     z-index: 10;
 }
@@ -145,8 +146,8 @@
     padding-top: 71px;
     position: relative;
     line-height: 1.3;
-    margin-bottom: 143px;
-    letter-spacing: -1px;
+    margin-bottom: 95px;
+    /* letter-spacing: -1px; */
     padding-left: 80px;
 }
 
@@ -170,9 +171,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 80px;
+    height: 75px;
     background: #7f6a57;
-    top: -110px;
+    top: -71px;
     right: 0;
 }
 
@@ -180,9 +181,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 246px;
+    height: 229px;
     left: 0px;
-    bottom: -68px;
+    bottom: -60px;
 }
 
 .section04 .max-layout-width {
@@ -412,7 +413,8 @@
 }
 
 .section02 .section-title {
-    line-height: 1.3
+    line-height: 1.3;
+    padding-bottom: 8px;
 }
 
 .con05 .table-left, .con05 .table-right {
@@ -536,5 +538,10 @@
 }
 
 .section03 .section-title {
-    line-height: 1.3
+    line-height: 1.3;
+    padding-bottom: 10px;
+}
+
+.section-text {
+    /* padding-top: 30px; */
 }
