--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -22,7 +22,7 @@
 .section01 .bg {
     margin-top: 42px;
     background: #f5f5f5;
-    padding-top: 42px;
+    padding-top: 25px;
     padding-bottom: 166px;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .section03 {
-    margin-top: 59px;
+    margin-top: 88px;
 }
 
 .section03 .max-layout-width .text {
@@ -60,7 +60,7 @@
 
 .section03 .image_box_right {
     max-width: 1276px;
-    height: 521px;
+    height: 397px;
     width: 50%;
     z-index: 10;
 }
@@ -70,12 +70,12 @@
 }
 
 .section03 .section-title {
-    padding-top: 99px;
+    padding-top: 88px;
     position: relative;
     line-height: 1.3;
-    margin-bottom: 117px;
+    margin-bottom: 92px;
     padding-left: 164px;
-    letter-spacing: -1.5px;
+    /* letter-spacing: -1.5px; */
 }
 
 .section03 .max-layout-width .text > div:before {
@@ -99,9 +99,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 80px;
+    height: 69px;
     background: #7f6a57;
-    top: -102px;
+    top: -76px;
     right: 0;
 }
 
@@ -109,9 +109,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 231px;
+    height: 219px;
     left: 0px;
-    bottom: -62px;
+    bottom: -55px;
 }
 
 .section03 .max-layout-width {
@@ -126,14 +126,15 @@
 
 .section04 .section-title {
     line-height: 1.3;
-    letter-spacing: -2px;
+    /* letter-spacing: -2px; */
+    padding-top: 28px;
 }
 
 .section04 .section-text {
     width: 590px;
     word-break: keep-all;
     line-height: 1.7;
-    margin-top: 40px;
+    margin-top: 16px;
 }
 
 .section04 .max-layout-width {
@@ -171,7 +172,7 @@
 
 .section05 {
     background: #9a8b7e;
-    padding-bottom: 68px;
+    padding-bottom: 64px;
 }
 
 .section05 .text {
@@ -182,7 +183,8 @@
 .section05 .text h2 {
     font-size: 33px;
     color: #fff;
-    font-weight: bold;
+    /* font-weight: bold; */
+    letter-spacing: -3px;
 }
 
 .section05 ul {
@@ -193,7 +195,7 @@
 .section05 .image_box_right {
     width: 790px;
     height: 374px;
-    top: 74px;
+    top: 49px;
     right: -138px;
 }
 
@@ -220,6 +222,7 @@
 .section05 .text li p {
     line-height: 1.7;
     color: #fff;
+    letter-spacing: -1px;
 }
 
 .section05 .text .img01 {
@@ -250,12 +253,12 @@
 }
 
 .section06 {
-    margin-top: 88px;
+    margin-top: 78px;
 }
 
 .section06 .section-title {
     line-height: 1.3;
-    margin-bottom: 29px;
+    margin-bottom: 10px;
     padding-top: 30px;
 }
 
@@ -298,7 +301,7 @@
     display: inline-block;
     font-weight: bold;
     cursor: pointer;
-    letter-spacing: -1px;
+    letter-spacing: -1.5px;
     line-height: 13px;
 }
 
@@ -483,7 +486,7 @@ body .section02 li:first-child {
 }
 
 .section07 {
-    margin-top: 38px;
+    margin-top: 124px;
     height: 700px;
 }
 
@@ -551,12 +554,12 @@ body .section02 li:first-child {
 }
 
 .section08 {
-    margin-top: 66px;
+    margin-top: 82px;
     text-align: center;
 }
 
 .section08 .section-title {
-    margin-bottom: 35px;
+    margin-bottom: 13px;
 }
 
 .section08 .section-text {
