--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -280,8 +280,8 @@
 
 
 .section03 {
-    margin-top: 92px;
-    padding-bottom: 267px;
+    /* margin-top: 92px; */
+    padding-bottom: 235px;
     overflow: hidden;
 }
 
@@ -312,7 +312,7 @@
 
 .section03 .section-text {
     line-height: 1.9;
-    margin-top: 20px;
+    margin-top: 11px;
     position: relative;
     width: 340px;
     word-break: keep-all;
@@ -332,7 +332,7 @@
 .section03 .image_box_left {
     /* max-width: 1048px; */
     width: 100%;
-    height: 449px;
+    height: 420px;
     top: 0;
     right: 0;
     margin-left: 210px;
@@ -344,7 +344,7 @@
     position: absolute;
     z-index: 2;
     top: 42px;
-    width: 41%;
+    width: 51%;
 }
 
 
@@ -354,7 +354,7 @@
     left: -32px;
     top: 0;
     width: 50%;
-    height: 449px;
+    height: 425px;
 }
 
 .section03 .max-layout-width {
