--- a/src/main/webapp/css/info/competitiveness.css
+++ b/src/main/webapp/css/info/competitiveness.css
@@ -53,7 +53,7 @@ section {
 
 .list-img {
     width: 100%;
-    height: 149px;
+    height: 145px;
 }
 
 .list-img1 {
@@ -80,9 +80,9 @@ section {
 
 .list ul {
     display: inline-block;
-    height: 264px;
+    height: 239px;
     width: 100%;
-    padding: 19px 0;
+    padding: 12px 0;
     box-sizing: border-box;
 }
 
@@ -112,7 +112,7 @@ section {
 }
 
 .section02 {
-    margin-top: 108px;
+    margin-top: 92px;
     padding-bottom: 82px;
 }
 
@@ -192,7 +192,7 @@ section {
 }
 
 .section03 {
-    margin-top: 120px;
+    margin-top: 107px;
     padding-bottom: 108px;
 }
 
@@ -410,6 +410,6 @@ section {
 
 .section-title {
     line-height: 1.38;
-    letter-spacing: -1.8px;
+    /* letter-spacing: -1.8px; */
     padding-bottom: 21px;
 }
