메인, 의료진 소개 CSS 수정 및 수정된 이미지 커밋

--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -71,7 +71,7 @@
 }
 
 .doctor-dec {
-    margin-top: 8px;
+    margin-top: 70px;
     margin-bottom: 18px;
     font-size: 18px;
     color: #a2a2a2;
@@ -294,4 +294,8 @@ p + .dec-title {
 .doctor-text-title {
     margin-top: 100px;
     margin-bottom: 100px;
+}
+
+.doctor-info:first-child .doctor-dec {
+    margin-top: 8px;
 }
