--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -487,7 +487,7 @@ body {
     background: #f5f5f5;
     padding-top: 88px;
     margin-top: 100px;
-    padding-bottom: 79px;
+    padding-bottom: 149px;
 }
 
 .section07 h4 {
@@ -529,13 +529,14 @@ body {
 .slider-pagenation {
     position: relative;
     z-index: 10;
-    margin-top: 320px;
+    margin-top: 240px;
+    width: auto;
 }
 
 body .section07 .bx-wrapper {
     margin-left: auto;
     margin-right: 0;
-    top: -270px;
+    top: -190px;
     left: 370px;
     width: 1700px;
 }
