신규기능: 공지사항 이외에 나머지 리스트형 및 갤러리형 게시판에 실제 DB 데이터 적용

--- a/src/main/webapp/css/board/galleryBoard.css
+++ b/src/main/webapp/css/board/galleryBoard.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+.gallery-list .gallery li.empty {
+    width: 100%;
+}
+
 .gallery-list .gallery .img-box {
     overflow: hidden;
     position: relative;
