--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -5,14 +5,14 @@ header .header-banner-slider-continer .bx-wrapper {
 }
 
 .header-panel .header-banner-slider-continer {
-    padding-top: 3px;
+    padding-top: 16px;
 }
 
 .header-banner-close {
-    width: 58px;
+    width: 32px;
     height: 18px;
     color: #fff;
-    background: #333;
+    background: #333 url(../images/main/banner_close.png) no-repeat center;
     padding-left: 8px;
     line-height: 16px;
     box-sizing: border-box;
@@ -96,6 +96,7 @@ header .header-banner-slider-continer .bx-wrapper {
     height: 18px;
     border: 1px solid #d1d1d1;
     left: 85px;
+    background: url(../images/main/arrow_left00.png) no-repeat center;
 }
 
 .bx-wrapper .bx-controls-direction a.bx-next {
@@ -104,6 +105,7 @@ header .header-banner-slider-continer .bx-wrapper {
     border: 1px solid #d1d1d1;
     border-left: none;
     left: 103px;
+    background: url(../images/main/arrow_right00.png) no-repeat center;
 }
 
 header .cmmn-nav nav ol li {
@@ -162,6 +164,7 @@ header nav .nav-detail > li {
     overflow: hidden;
     padding-bottom: 10px;
     border-top: 1px solid #bbb;
+    border-bottom: 1px solid #bbb;
     height: 309px;
     display: none;
 }
@@ -276,4 +279,8 @@ header.active {
 
 header.active .fixed {
     position: fixed;
+}
+
+header nav {
+    border-bottom: 1px solid #bbb;
 }
