--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -8,18 +8,7 @@ body {
 
 .section02 {
     margin-bottom: 107px;
-}
-
-.section02:before {
-    content: '';
-    width: 1px;
-    height: 634px;
-    position: absolute;
-    display: inline-block;
-    background: #010101;
-    top: 185px;
-    left: 0;
-    z-index: 10;
+    text-align: center;
 }
 
 .section02 > h2, .section02 > p {
@@ -129,7 +118,7 @@ body {
     overflow: hidden;
 }
 
-.img-box li:before, .slide-box:before {
+.img-box li:before, .slide-box:before, .review > div:before {
     top: 0;
     left: 0;
     width: 0;
@@ -141,7 +130,7 @@ body {
     background: linear-gradient(to right, #9a8b7e 0%, #9a8b7e 100%);
 }
 
-.img-box li:after, .slide-box:after {
+.img-box li:after, .slide-box:after, .review > div:after {
     bottom: 0;
     left: 0;
     width: 0;
@@ -153,7 +142,7 @@ body {
     background: linear-gradient(to top, #9a8b7e 0%, #9a8b7e 100%);
 }
 
-.img-box li div:before, .slide-box div:before {
+.img-box li div:before, .slide-box div:before, .review > div a:before {
     bottom: 0;
     right: 0;
     width: 0;
@@ -165,7 +154,7 @@ body {
     background: linear-gradient(to left, #9a8b7e 0%, #9a8b7e 100%);
 }
 
-.img-box li div:after, .slide-box div:after {
+.img-box li div:after, .slide-box div:after, .review > div a:after {
     top: 0;
     right: 0;
     width: 0;
@@ -178,7 +167,9 @@ body {
 }
 
 .img-box li:hover:before, .img-box li div:hover:before,
-.slide-box:hover:before, .slide-box div:hover:before {
+.slide-box:hover:before, .slide-box div:hover:before,
+.review > div:hover:before, .review > div a:hover:before
+{
     width: 100%;
     height: 6px;
     -webkit-transition: width 0.3s 0s, height 0s 0s;
@@ -186,8 +177,10 @@ body {
     transition: width 0.3s 0s, height 0s 0s
 }
 
+
 .img-box li:hover:after, .img-box li div:hover:after,
-.slide-box:hover:after, .slide-box div:hover:after {
+.slide-box:hover:after, .slide-box div:hover:after,
+.review > div:hover:after, .review > div a:hover:after {
     height: 100%;
     width: 6px;
     -webkit-transition: width 0s 0s, height 0.3s 0s;
@@ -196,17 +189,28 @@ body {
 }
 
 .img-box li:before, .img-box li div:before,
-.slide-box:before, .slide-box div:before{
+.slide-box:before, .slide-box div:before,
+.review > div:before, .review > div a:before {
     -webkit-transition: width 0s 0.3s, height 0.3s 0s;
     -o-transition: width 0s 0.3s, height 0.3s 0s;
     transition: width 0s 0.3s, height 0.3s 0s;
 }
 
 .img-box li:after, .img-box li div:after,
-.slide-box:after, .slide-box div:after {
+.slide-box:after, .slide-box div:after,
+.review > div:after, .review > div a:after {
     -webkit-transition: width 0.3s 0s, height 0s 0.3s;
     -o-transition: width 0.3s 0s, height 0s 0.3s;
     transition: width 0.3s 0s, height 0s 0.3s;
+}
+
+
+.review > div:hover:before, .review > div a:hover:before {
+    height: 2px;
+}
+
+.review > div:hover:after, .review > div a:hover:after {
+    width: 2px;
 }
 
 .img-box img {
@@ -350,6 +354,11 @@ body {
     padding: 16px 30px;
     letter-spacing: -1.5px;
     font-weight: 600;
+
+}
+
+.section04 .details-link a {
+    color: #9c8c7f;
 }
 
 .section04 .text h4 + p {
@@ -387,31 +396,48 @@ body {
 }
 
 .review-text {
-    padding-left: 80px;
     padding-top: 35px;
+    text-align: center;
+    height: 161px;
+    border: 1px solid #d7d7d7;
+    box-sizing: border-box;
 }
 
 .review-text h4 {
     font-size: 22px;
-    color: #222;
-    margin-bottom: 20px;
+    color: #7f6856;
+    margin-bottom: 26px;
     font-weight: bold;
     letter-spacing: -1.5px;
 }
 
 .review-text p {
     font-size: 15px;
-    color: #939393;
+    color: #222;
     letter-spacing: -1px;
+    padding: 0 20px;
+    word-break: keep-all;
+    line-height: 1.6;
+    display: inline-block;
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    height: 3.6em;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin: 0 auto;
 }
 
 .section04 .bx-wrapper {
     margin-left: auto;
-    width: 1700px;
+    /* width: 1700px; */
 }
 
 .section04 .bx-viewport {
-    padding-left: 8px;
+    /* padding-left: 8px; */
 }
 
 .section06 {
@@ -483,6 +509,24 @@ body {
     left: auto;
 }
 
+
+.section04 .bx-wrapper .bx-controls-direction a {
+    width: 71px;
+    height: 71px;
+    border: none;
+    margin-top: 180px;
+    top: 0;
+}
+
+.section04 .bx-wrapper .bx-controls-direction a.bx-prev {
+    left: -100px;
+}
+
+.section04 .bx-wrapper .bx-controls-direction a.bx-next {
+    right: -100px;
+    left: auto;
+}
+
 .section07 {
     background: #f5f5f5;
     padding-top: 88px;
@@ -537,29 +581,26 @@ body .section07 .bx-wrapper {
     margin-left: auto;
     margin-right: 0;
     top: -190px;
-    left: 370px;
+    left: 410px;
     width: 1700px;
 }
 
 body .section07 .bx-pager-link {
-    margin-bottom: 48px;
     position: relative;
     display: inline-block;
+    color: #fff;
+    box-sizing: border-box;
+    padding: 22px 30px;
+    background: #9b8b7e;
+    width: 100%;
 }
 
-body .section07 .bx-pager-link.active:after {
-    content: '';
-    position: absolute;
-    width: 496px;
-    height: 4px;
-    background: #998b7e;
-    left: 0;
-    bottom: -26px;
-    top: 50px;
+body .section07 .bx-pager-link.active {
+    background: #aa9a8b;
 }
 
 body .section07 .bx-pager-link span {
-    color: #222;
+    color: #fff;
 }
 
 body .section07 .bx-pager-link span:first-child {
@@ -589,7 +630,7 @@ body .section07 .bx-pager-link span + span {
 
 .section08 h4 span {
     position: absolute;
-    right: 14px;
+    right: 0;
     font-size: 14px;
     bottom: 25px;
     letter-spacing: 0px;
@@ -598,6 +639,12 @@ body .section07 .bx-pager-link span + span {
 .section08 h4 a {
     text-decoration: none;
     color: #000002;
+    text-indent: -9999px;
+    display: inline-block;
+    width: 38px;
+    height: 38px;
+    border: 1px solid #444;
+    background: url(../images/main/more.png) no-repeat center;
 }
 
 .consultant {
@@ -725,14 +772,14 @@ body .section07 .bx-pager-link span + span {
     position: relative;
 }
 
-.section09 .slide-text p + p:after {
-    background: url(../images/main/arrow02.png);
+.section09 .slide-text p:after {
+    background: url(../images/main/more02.png);
     content: '';
     position: absolute;
-    top: 51px;
+    bottom: -80px;
     left: 0;
-    width: 66px;
-    height: 10px;
+    width: 43px;
+    height: 43px;
 }
 
 .section09 .slide-text a {
@@ -753,6 +800,7 @@ body .section07 .bx-pager-link span + span {
 
 .section09 .slide-text p:first-child {
     margin-bottom: 11px;
+    position: relative;
 }
 
 .section09 > div {
@@ -804,8 +852,16 @@ body .section07 .bx-pager-link span + span {
 .section05 {
     margin-top: 114px;
     position: relative;
-    height: 567px;
-    padding: 20px 0;
+    height: 627px;
+    padding: 70px 0;
+    background: #f5f5f5;
+}
+
+.section05 > div {
+    padding: 30px 0;
+    position: relative;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .section05 .section-title {
@@ -959,6 +1015,7 @@ body .section07 .bx-pager-link span + span {
     margin-bottom: 25px;
     margin-top: 30px;
     letter-spacing: -2px;
+    font-family: KCC !Important;
 }
 
 .section05 .dc {
@@ -979,7 +1036,7 @@ body .section07 .bx-pager-link span + span {
 .section05 .bg {
     width: 50%;
     height: 100%;
-    background: #9a8b7e;
+    background: #9a8b7e url(../images/main/main_bg02.jpg) no-repeat center;
     position: absolute;
     top: 0;
     right: 0;
@@ -995,4 +1052,163 @@ body .section07 .bx-pager-link span + span {
 
 .section07 .bx-pager-item {
     display: inline-block;
+    width: 360px;
+    height: 69px;
+    color: #fff;
+}
+
+
+.section02 .display-inline-block {
+    width: 1028px;
+}
+
+.section02 ul {
+    width: 100%;
+    display: inline-block;
+    margin-left: -2%;
+}
+
+.section02 li {
+    float: left;
+    width: 31.3333333%;
+    margin-left: 2%;
+    position: relative;
+    cursor: pointer;
+}
+
+.section02 li div {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    width: 100%;
+}
+
+.section02 li div h3 {
+    font-size: 29px;
+
+}
+
+.section02 li div.nomal {
+    padding-bottom: 39px;
+    display: block;
+}
+
+.section02 li div.hover {
+    display: none;
+    height: 204px;
+    padding-top: 37px;
+    background: rgba(162,148,137,0.8);
+    box-sizing: border-box;
+}
+
+.section02 li div.hover h3 {
+    padding-bottom: 25px;
+}
+
+.section02 li div.hover p {
+    line-height: 1.7;
+    font-size: 16px;
+}
+
+.section02 li img {
+    width: 100%;
+}
+
+.section02 li:hover div.nomal {
+    display: none;
+}
+
+.section02 li:hover div.hover {
+    display: block;
+}
+
+.review > div a {
+    display:block;
+}
+
+.review > div:hover {
+    box-shadow: 2px 2px 10px #b3b3b3;
+}
+
+.section05 .img-arrow {
+    margin-top: 46px;
+    position: absolute;
+    z-index: 10000;
+}
+
+.section05 .img-arrow .slick-arrow {
+    width: 87px;
+    height: 68px;
+    display: inline-block !important;
+    text-indent: -999px;
+    cursor: pointer;
+}
+
+.section05 .img-arrow .slider-prev {
+    background: #fff url(../images/main/arrow_left04.png) no-repeat center;
+    position: relative;
+}
+
+.section05 .img-arrow .slider-prev:before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 10px;
+    right: 0;
+    top: 50%;
+    background: #999;
+    margin-top: -4px;
+}
+
+
+.section05 .img-arrow .slider-next {
+    background: #fff url(../images/main/arrow_right04.png) no-repeat center;
+}
+
+.section07 .bx-controls {
+    position: absolute;
+    top: -71px;
+    width: 360px;
+}
+
+.section07 .bx-controls a {
+    position: absolute;
+}
+
+.section07 .bx-controls .bx-prev {
+    left: 0;
+}
+
+.section07 .bx-controls .bx-next {
+    right: 0;
+}
+
+.section07 .slider-origin-pagination {
+    position: absolute;
+    top: -60px;
+    width: 360px;
+    text-align: center;
+    height: 0;
+}
+
+.section07 .slider-origin-pagination ul {
+    display: inline-block;
+}
+
+.section07 .slider-origin-pagination li {
+    height: 10px;
+    width: 10px;
+    background: #d7d7d7;
+    float: left;
+    margin: 0 5px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.section07 .slider-origin-pagination li.active {
+    background: #9b8b7e;
+}
+
+.section01 .bx-controls {
+    display: none;
 }
