--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -10,6 +10,13 @@ section {
     position: relative;
 }
 
+.section01 {
+    background: url(../../images/sub/info/intro/intro01.jpg) no-repeat center;
+    color: #fff;
+    height: 749px;
+    margin-top: 97px;
+}
+
 .section01 .img01 {
     width: 41.3401%;
     max-width: 1055px;
@@ -60,9 +67,9 @@ section {
     left: 0;
     width: 634px;
     height: 3px;
-    background: #7e6956;
+    background: #ab9e95;
     bottom: -58px;
-    left: -71px;
+    left: -151px;
 }
 
 .move-title {
@@ -94,6 +101,7 @@ section {
     right: -36px;
     bottom: -2px;
     content: '';
+    display: none;
 }
 
 .section02 {
@@ -198,11 +206,11 @@ section {
     margin-top: 28px;
     padding-top: 96px;
     padding-bottom: 90px;
-    background: #f5f5f5;
+    background: #0c1534;
 }
 
 .container {
-    width: 1263px;
+    width: 1206px;
     margin: 0 auto;
 }
 
@@ -225,8 +233,8 @@ section {
 
 .section05 ul {
     width: 100%;
-    padding-left: 54px;
     position: relative;
+    margin-left: -2%;
 }
 
 .section05 ul:before {
@@ -237,12 +245,13 @@ section {
     position: absolute;
     left: 0;
     top: 0;
+    display: none;
 }
 
 .section05 ul li {
     float: left;
-    width: 30.33333%;
-    margin-right: 2%;
+    width: 31.33333%;
+    margin-left: 2%;
 }
 
 .image-container {
@@ -255,6 +264,7 @@ section {
     margin-top: 33px;
     letter-spacing: -1px;
     font-weight: 700;
+    color: #9b8a80;
 }
 
 .image-container p {
@@ -305,7 +315,7 @@ section {
 }
 
 .img-bg-box {
-    margin-top: 29px;
+    margin-top: 58px;
 }
 
 .section06 {
@@ -389,4 +399,42 @@ section {
 
 .section06 .display-inline-block {
     width: 100%;
+}
+
+.section01 .section-title {
+    color: #fff;
+}
+
+.section01 p {
+    color: #fff;
+}
+
+.section05 .section-title {
+    text-align: center;
+    margin-bottom: 66px;
+    position: relative;
+}
+
+.section05 .section-title:before {
+    content: '';
+    position: absolute;
+    width: 75px;
+    height: 66px;
+    background: url(../../images/sub/info/intro/intro_icon01.png);
+    margin-left: -90px;
+    margin-top: -14px;
+}
+
+.section05 {
+    color: #fff;
+}
+
+.section05 .section-title-color {
+    color: #fff;
+    font-weight: bold;
+}
+
+.section05 .section-title strong {
+    color: #fff;
+    font-weight: 100;
 }
