--- a/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
@@ -53,7 +53,6 @@
 }
 
 .section02 .max-layout-width .text {
-    padding-right: 50%;
 }
 
 .section02 .max-layout-width .text > div {
@@ -77,7 +76,7 @@
     line-height: 1.3;
     margin-bottom: 4px;
     letter-spacing: -3px;
-    text-align: right;
+    text-align: center;
     padding-right: 20px;
 }
 
@@ -85,20 +84,10 @@
     word-break: keep-all;
     line-height: 1.7;
     position: relative;
-    text-align: right;
+    text-align: center;
     padding-left: 47px;
     padding-top: 20px;
     padding-right: 21px;
-}
-
-.section02 .section-text:before {
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 67px;
-    background: #7f6a57;
-    top: 97px;
-    right: 0;
 }
 
 .section02 .bg {
@@ -116,8 +105,9 @@
 }
 
 .section02 ul {
-    padding-top: 95px;
+    padding-top: 65px;
     box-sizing: border-box;
+    margin-left: -2%;
 }
 
 .section02 .text ul {
@@ -125,11 +115,22 @@
 }
 
 .section02 .text li {
-    padding-left: 120px;
     box-sizing: border-box;
     float: left;
-    width: 50%;
+    width: 23%;
     position: relative;
+    text-align: center;
+    margin-left: 2%;
+}
+
+.section02 .text li:before {
+    width: 100%;
+    height: 170px;
+    content: '';
+    border: 1px solid #d1d1d1;
+    display: block;
+    top: 0;
+    box-sizing: border-box;
 }
 
 .section02 .text li p {
@@ -138,34 +139,42 @@
     letter-spacing: -1.2px;
 }
 
+.section02 .text li p:before {
+    background: url(../../images/sub/orthodontics/grow/check_big.png);
+    content: '';
+    width: 48px;
+    height: 40px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 12px;
+    margin-bottom: 9px;
+}
+
 .section02 .text .img01 {
-    background: url(../../images/sub/orthodontics/grow/growth_icon01.png) no-repeat left top;
-    padding-top: 27px;
+    background: url(../../images/sub/orthodontics/grow/growth_icon01.png) no-repeat center top;
+    /* padding-top: 27px; */
     padding-bottom: 27px;
     margin-bottom: 25px;
-    background-position-x: 10px;
-    background-position-y: 8px;
+    background-position-y: 45px;
 }
 
 .section02 .text .img02 {
-    background: url(../../images/sub/orthodontics/grow/growth_icon02.png) no-repeat left top;
-    padding-top: 27px;
+    background: url(../../images/sub/orthodontics/grow/growth_icon02.png) no-repeat center top;
     padding-bottom: 27px;
     margin-bottom: 25px;
-    background-position: 0 9px;
+    background-position-y: 46px;
 }
 
 .section02 .text .img03 {
-    background: url(../../images/sub/orthodontics/grow/growth_icon03.png) no-repeat left top;
-    padding-top: 20px;
+    background: url(../../images/sub/orthodontics/grow/growth_icon03.png) no-repeat center top;
     padding-bottom: 27px;
-    background-position-x: 13px;
+    background-position-y: 43px;
 }
 
 .section02 .text .img04 {
-    background: url(../../images/sub/orthodontics/grow/growth_icon04.png) no-repeat left top;
-    padding-top: 20px;
+    background: url(../../images/sub/orthodontics/grow/growth_icon04.png) no-repeat center top;
     padding-bottom: 27px;
+    background-position-y: 46px;
 }
 
 .section04 {
@@ -349,51 +358,85 @@
 }
 
 .section03 {
-    margin-top: 112px;
-    padding: 90px 0;
-    background: #9b8b7e;
+    margin-top: 106px;
+    background: #0c1534;
+    padding-top: 201px;
+    padding-bottom: 172px;
 }
 
 .section03 .section-title {
-    line-height: 1.3;
-    margin-bottom: -7px;
-    text-align: center;
+    line-height: 1.35;
+    margin-bottom: 12px;
     color: #fff;
 }
 
 .section03 .section-text {
     line-height: 1.7;
-    word-break: keep-all;
-    margin-bottom: 50px;
-    text-align: center;
+    margin-bottom: 91px;
+}
+
+.section03 .image_box_right {
+    max-width: 1315px;
+    height: 435px;
+    width: 51.52%;
+    z-index: 1;
+    top: -140px;
+}
+
+.section03 .img {
+    background: url(../../images/sub/orthodontics/grow/growth08.jpg) no-repeat center;
+}
+
+.section03 .bg {
+    background: #f5f5f5;
+    width: 53.29%;
+    position: absolute;
+    height: 315px;
+    left: 0px;
+    bottom: -40px;
+}
+
+.section03 .max-layout-width {
+    position: relative;
+    z-index: 2;
+}
+
+.section03 .pager {
+    font-size: 15px;
     color: #fff;
-}
-
-.section03 ul {
-    overflow: hidden;
-    margin-left: 0;
-    width: 1000px;
-    margin: 0 auto;
-}
-
-.section03 ul li {
-    width: 25%;
-    float: left;
-    text-align: center;
-}
-
-.section03 ul li img {
-    width: 100%;
-    margin-bottom: 30px;
-    max-width: 146px;
-}
-
-.section03 ul li p {
-    text-align: center;
+    padding: 9px 0;
+    position: relative;
+    padding-left: 40px;
+    display: inline-block;
     font-weight: bold;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #fff;
+    cursor: pointer;
+    letter-spacing: -1px;
+}
+
+.section03 .pager span {
+    display: none;
+    position: absolute;
+}
+
+.section03 .pager.active:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+}
+
+.section03 .pager.active span {
+    display: block;
+    left: 0;
+    font-weight: bold;
+    font-size: 20px;
+    top: 1px;
+    background: url(../../images/sub/orthodontics/grow/check_small.png);
+    width: 28px;
+    height: 24px;
 }
 
 .section07 {
