기능수정: 기타 추가 수정 작업
1. 폰트확인
2. 치료사례 화살표 적용
3. 푸터에 글자 |를 background로 적용
4. 메인에 작은 폰트는 #9c9c9c로 변경
5. footer 하얀색 부분 height 줄이기 및 글자 1px 줄이기
6. move-text 한번에 움직이기
7. 테이블 어긋나는 것 수정

--- a/src/main/webapp/css/clientFooter.css
+++ b/src/main/webapp/css/clientFooter.css
@@ -108,7 +108,7 @@
 }
 
 .footer {
-    padding: 40px 0;
+    padding: 30px 0;
 }
 
 .footer .max-layout-width {
@@ -130,7 +130,7 @@
     color: #111;
     display: block;
     padding: 0 23px;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .footer-link li:before {
@@ -152,10 +152,21 @@
     margin-bottom: 13px;
     color: #222;
     letter-spacing: -1px;
-    font-size: 14px;
+    font-size: 13px;
 }
 
 .footer-copyright {
     color: #8a8a8a;
-    font-size: 14px;
+    font-size: 13px;
 }
+
+.footer-line {
+    width: 1px;
+    height: 17px;
+    background: #888886;
+    display: inline-block;
+    vertical-align: -2px;
+    margin: 0 10px;
+}
+
+
