--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -2,12 +2,50 @@
     font-family: 'Noto Sans KR';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/noto_sans/NotoSansKR-Regular.woff'); /* IE9 Compat Modes */
     src: local('Noto Sans KR Regular'), local('NotoSansKR-Regular'),
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.woff') format('woff'), /* Modern Browsers */
-    url('../fonts/noto-sans/noto-sans-kr-v12-latin_korean-regular.svg#NotoSansKR') format('svg'); /* Legacy iOS */
+    url('../fonts/noto_sans/NotoSansKR-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Regular.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/noto_sans/NotoSansKR-Medium.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Medium'),
+    url('../fonts/noto_sans/NotoSansKR-Medium.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Medium.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 100;
+    src: url('../fonts/noto_sans/NotoSansKR-Thin.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Thin'),
+    url('../fonts/noto_sans/NotoSansKR-Thin.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Thin.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 200;
+    src: url('../fonts/noto_sans/NotoSansKR-Light.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Light'),
+    url('../fonts/noto_sans/NotoSansKR-Light.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Light.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: bold;
+    src: url('../fonts/noto_sans/NotoSansKR-Bold.woff'); /* IE9 Compat Modes */
+    src: local('Noto Sans KR Regular'), local('NotoSansKR-Regular'),
+    url('../fonts/noto_sans/NotoSansKR-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/noto_sans/NotoSansKR-Bold.woff') format('woff') /* Modern Browsers */
 }
 
 @font-face {
@@ -34,9 +72,22 @@ url('../fonts/nanum_myeongjo/NanumMyeongjo.woff') format('woff'), /* Super Moder
     font-style: normal;
     font-weight: 400;
     src: url('../fonts/kcc/KCC.eot'); /* IE9 Compat Modes */
-url('../fonts/kcc/KCC.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-url('../fonts/kcc/KCC_1.woff2') format('woff2'), /* Super Modern Browsers */
-url('../fonts/kcc/KCC_1.woff') format('woff'), /* Super Modern Browsers */
+    src: url('../fonts/kcc/KCC.eot?#iefix') format('embedded-opentype'), /* IE9 Compat Modes */
+    url('../fonts/kcc/KCC.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/kcc/KCC.woff') format('woff') /* Modern Browsers */
+}
+
+@font-face {
+    font-family: 'Anton';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/anton/anton-v12-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Anton Regular'), local('Anton-Regular'),
+    url('../fonts/anton/anton-v12-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../fonts/anton/anton-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('../fonts/anton/anton-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('../fonts/anton/anton-v12-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('../fonts/anton/anton-v12-latin-regular.svg#Anton') format('svg'); /* Legacy iOS */
 }
 
 
@@ -102,6 +153,7 @@ section {
     /* margin-bottom: 19px; */
     color: #212121;
     letter-spacing: -3px;
+    font-weight: 200;
 }
 
 .section-title strong {
@@ -239,6 +291,7 @@ a {
     font-weight: 600;
     margin-bottom: 59px;
     bottom: 0;
+    font-family: Anton !important;
 }
 
 .detail:after {
@@ -265,6 +318,7 @@ strong {
 .treatment-case {
     padding: 93px 0;
     background: #f5f5f5 url(../images/sub/implant/cmmn/digital_bg.jpg) center;
+    text-align: center;
 }
 
 .treatment-case .treatment-case-slider {
@@ -274,9 +328,9 @@ strong {
 }
 
 .treatment-case .max-layout-width {
-    overflow: hidden;
     position: relative;
     padding-bottom: 40px;
+    display: inline-block;
 }
 
 .treatment-case .max-layout-width > div {
@@ -368,14 +422,18 @@ strong {
     top: 50%;
     width: 27px;
     height: 45px;
+    z-index: 1000000;
+    cursor: pointer;
 }
 
 .treatment-case .slider-prev {
-    background: url(../images/sub/implant/cmmn/left_arrow02.png);
+    background: url(../images/sub/implant/cmmn/right_arrow02.png) no-repeat center;
+    left: -70px;
 }
 
 .treatment-case .slider-next {
-    background: url(../images/sub/implant/cmmn/right_arrow02.png);
+    background: url(../images/sub/implant/cmmn/left_arrow02.png) no-repeat center;
+    right: -70px;
 }
 
 section.board-link {
