--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -276,9 +276,10 @@
 .table-left, .table-right {
     width: 559px;
     font-size: 16px;
-    padding: 22px 0;
+    padding: 22px 110px;
     line-height: 1.6;
     letter-spacing: -1px;
+    word-break: keep-all;
 }
 
 .table-middle {
@@ -289,6 +290,7 @@
     border-left: 1px solid #8f8f8f;
     border-right: 1px solid #8f8f8f;
     letter-spacing: -2px;
+    line-height: 1.4;
 }
 
 .cont ul {
@@ -431,7 +433,7 @@
     padding: 43px 0;
 }
 
-.cont span {
+.table span {
     color: #ec6707;
 }
 
@@ -544,4 +546,36 @@
 
 .section-text {
     /* padding-top: 30px; */
+}
+
+
+.table td, .table th {
+    border: 1px solid #8f8f8f;
+    text-align: center;
+    background: #fff;
+    vertical-align: middle;
+}
+
+.table th {
+    height: 58px;
+    padding: 0;
+    vertical-align: middle;
+}
+
+.table th.table-left {
+    background: #8f8f8f;
+    color: #fff;
+    font-size: 22px;
+}
+
+.table th.table-middle {
+    background: #8f8f8f;
+    color: #fff;
+    background: #222;
+}
+
+.table th.table-right {
+    background: #9b8b7e;
+    color: #fff;
+    font-size: 22px;
 }
