--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'ramaraja';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../fonts/ramaraja/Ramaraja-Regular.woff') format('woff') /* Modern Browsers */
+}
+
+
 section {
     position: relative;
 }
@@ -49,6 +57,7 @@ section {
 
 .section01 .text-box h2 + p {
     margin-top: 87px;
+    padding-bottom: 70px;
 }
 
 .last-section-text {
@@ -132,11 +141,12 @@ section {
 }
 
 .section02 .text-box, .section04 .text-box {
-    padding-top: 144px;
+    padding-top: 24px;
 }
 
 .section02 .move-title, .section04 .move-title {
     top: 27;
+    margin-bottom: 30px;
 }
 
 .section02 .section-text span {
@@ -164,11 +174,12 @@ section {
 
 .section03 .text-box {
     padding-left: 50%;
-    padding-top: 146px;
+    padding-top: 24px;
 }
 
 .section03 .move-title {
     top: 27px;
+    margin-bottom: 30px;
 }
 
 .section03 .section-text {
@@ -259,12 +270,18 @@ section {
 }
 
 .image-container h5 {
-    font-size: 23px;
-    font-width: bold;
+    font-size: 43px;
+
     margin-top: 33px;
     letter-spacing: -1px;
-    font-weight: 700;
+    /* font-weight: 700; */
     color: #9b8a80;
+    font-family: ramaraja !important;
+}
+
+.image-container h5 span {
+    font-family: ramaraja !important;
+    font-size: 60px;
 }
 
 .image-container p {
@@ -437,4 +454,8 @@ section {
 .section05 .section-title strong {
     color: #fff;
     font-weight: 100;
+}
+
+.section02 .move-title {
+    margin-bottom: 30px;
 }
