--- a/src/main/webapp/css/orthodontics/misowonOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/misowonOrthodontics.css
@@ -284,7 +284,7 @@
 .table-left, .table-right {
     width: 559px;
     font-size: 16px;
-    padding: 24px 0;
+    /* padding: 24px 0; */
     line-height: 1.6;
     letter-spacing: -1px;
 }
@@ -495,4 +495,41 @@
 
 .section08 {
     margin-top: 79px;
+}
+
+
+.table td, .table th {
+    border: 1px solid #8f8f8f;
+    text-align: center;
+    background: #fff;
+    vertical-align: middle;
+}
+
+.table th {
+    height: 58px;
+    padding: 0;
+    vertical-align: middle;
+}
+
+.table th.table-left {
+    background: #8f8f8f;
+    color: #fff;
+    font-size: 22px;
+}
+
+.table th.table-middle {
+    background: #8f8f8f;
+    color: #fff;
+    background: #222;
+}
+
+.table th.table-right {
+    background: #9b8b7e;
+    color: #fff;
+    font-size: 22px;
+}
+
+.table img {
+    width: 100%;
+    height: 100%;
 }
